- Fixed bug #33536 (strtotime defaults to now even on non time string).

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@189821 c90b9560-bf6c-de11-be94-00142212c4b1